--- a/EmployeeManagementSystem/src/main/webapp/enterIdtoUpdate.html
+++ b/EmployeeManagementSystem/src/main/webapp/enterIdtoUpdate.html
@@ -5,10 +5,10 @@
 <title>Enter Id:</title>
 </head>
 <body>
-
+<h1><centre>UPDATE EMPLOYEE BY ID</centre></h1>
 <form method="POST" action="UpdateEmployeeDetailsController">
 
-<label>Employee Id : </label><input type="text" name="id">
+<label>Employee Id : </label><input type="text" name="updateid">
 <br><br>
 <input type="submit" value="submit">
 <br><br>
