--- a/EmployeeManagementSystem/src/main/webapp/enterIdtoUpdate.html
+++ b/EmployeeManagementSystem/src/main/webapp/enterIdtoUpdate.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1><centre>UPDATE EMPLOYEE BY ID</centre></h1>
-<form method="POST" action="UpdateEmployeeDetailsController">
+<form method="GET" action="UpdateEmployeeDetailsController">
 
 <label>Employee Id : </label><input type="text" name="updateid">
 <br><br>
